tests/int/use_command/snapshots/integration__int__use_command__own_modules__module_logger_flags_t_e_d_1.snap
---
source: tests/int/use_command/own_modules.rs
info:
  program: crawk
  args:
    - use
    - logger
    - "-t"
    - "-e"
    - "-d"
    - "1"
---
success: true
exit_code: 0
----- stdout -----
crate::cli
crate::logger

----- stderr -----
