tests/int/use_command/snapshots/integration__int__use_command__own_modules__module_main_flags_r_t_e_G.snap
---
source: tests/int/use_command/own_modules.rs
info:
  program: crawk
  args:
    - use
    - main
    - "-r"
    - "-t"
    - "-e"
    - "-G"
---
success: true
exit_code: 0
----- stdout -----
crate::cli::CheckArgs
crate::cli::CheckOutputFormat
crate::cli::CrawkArgs
crate::cli::CrawkCommands
crate::cli::CrawkOptions
crate::cli::CyclesMode
crate::cli::DepsArgs
crate::cli::DepsOutputFormat
crate::cli::ListArgs
crate::cli::ListDisplayArgs
crate::cli::ListOutputFormat
crate::cli::UseArgs
crate::cli::UseOutputFormat
crate::cli::WhyArgs
crate::cli::WhyOutputFormat
crate::cli::overview::generate_after_help
crate::cli::validation::validate_depth
crate::cli::validation::validate_module_path
crate::format
crate::format::check_cmd::render_plain
crate::format::cycles::render_cycles_dot
crate::format::cycles::render_cycles_dot_highlight
crate::format::cycles::render_cycles_grouped
crate::format::cycles::render_cycles_plain
crate::format::deps_cmd::render_dot
crate::format::deps_cmd::render_grouped
crate::format::deps_cmd::render_plain
crate::format::format_api_suffix
crate::format::list_cmd::ListDisplayOptions
crate::format::list_cmd::render_list_plain
crate::format::list_cmd::render_list_table
crate::format::orphans::render_orphans
crate::format::paths::render_paths_dot
crate::format::paths::render_paths_grouped
crate::format::paths::render_paths_plain
crate::format::use_cmd::render_flat
crate::format::use_cmd::render_grouped
crate::format::why_cmd::render_grouped
crate::format::why_cmd::render_plain
crate::logger::configure_tracing
crate::logger::use_ansi_colors
crawk::AnalysisOptions
crawk::AnalysisResult
crawk::Analyzer
crawk::AnnotatedEdges
crawk::CheckOptions
crawk::CheckReport
crawk::Cycle
crawk::DependencyGraph
crawk::DependencyGraphOptions
crawk::Edge
crawk::ModuleInfo
crawk::TypeReference
crawk::version
crawk::version::LONG_VERSION_MESSAGE
crawk::version::NAME
crawk::version::VERSION

----- stderr -----
