tests/int/use_command/snapshots/integration__int__use_command__own_modules__module_main_flags_r_t_e_format_grouped_G.snap
---
source: tests/int/use_command/own_modules.rs
info:
  program: crawk
  args:
    - use
    - main
    - "-r"
    - "-t"
    - "-e"
    - "--format"
    - grouped
    - "-G"
---
success: true
exit_code: 0
----- stdout -----
main
 - crate::cli::CheckArgs
 - crate::cli::CheckOutputFormat
 - crate::cli::CrawkArgs
 - crate::cli::CrawkCommands
 - crate::cli::CyclesMode
 - crate::cli::DepsArgs
 - crate::cli::DepsOutputFormat
 - crate::cli::ListArgs
 - crate::cli::ListOutputFormat
 - crate::cli::UseArgs
 - crate::cli::UseOutputFormat
 - crate::cli::WhyArgs
 - crate::cli::WhyOutputFormat
 - crate::format
 - crate::format::check_cmd::render_plain
 - crate::format::cycles::render_cycles_dot
 - crate::format::cycles::render_cycles_dot_highlight
 - crate::format::cycles::render_cycles_grouped
 - crate::format::cycles::render_cycles_plain
 - crate::format::deps_cmd::render_dot
 - crate::format::deps_cmd::render_grouped
 - crate::format::deps_cmd::render_plain
 - crate::format::list_cmd::ListDisplayOptions
 - crate::format::list_cmd::render_list_plain
 - crate::format::list_cmd::render_list_table
 - crate::format::orphans::render_orphans
 - crate::format::paths::render_paths_dot
 - crate::format::paths::render_paths_grouped
 - crate::format::paths::render_paths_plain
 - crate::format::use_cmd::render_flat
 - crate::format::use_cmd::render_grouped
 - crate::format::why_cmd::render_grouped
 - crate::format::why_cmd::render_plain
 - crate::logger::configure_tracing
 - crawk::AnalysisOptions
 - crawk::Analyzer
 - crawk::AnnotatedEdges
 - crawk::CheckOptions
 - crawk::DependencyGraph
 - crawk::DependencyGraphOptions
 - crawk::version
 - crawk::version::NAME
 - crawk::version::VERSION
cli
 - crate::cli::overview::generate_after_help
 - crate::cli::validation::validate_depth
 - crate::cli::validation::validate_module_path
 - crawk::version
 - crawk::version::LONG_VERSION_MESSAGE
 - crawk::version::VERSION
cli::overview
 - crawk::version
cli::tests
 - crate::cli::CheckArgs
 - crate::cli::CheckOutputFormat
 - crate::cli::CrawkArgs
 - crate::cli::CrawkCommands
 - crate::cli::CrawkOptions
 - crate::cli::CyclesMode
 - crate::cli::DepsArgs
 - crate::cli::DepsOutputFormat
 - crate::cli::ListArgs
 - crate::cli::ListDisplayArgs
 - crate::cli::ListOutputFormat
 - crate::cli::UseArgs
 - crate::cli::UseOutputFormat
 - crate::cli::WhyArgs
 - crate::cli::WhyOutputFormat
cli::validation
cli::validation::tests
 - crate::cli::validation::validate_depth
 - crate::cli::validation::validate_module_path
format
format::check_cmd
 - crate::format::format_api_suffix
 - crawk::CheckReport
format::cycles
 - crate::format::format_api_suffix
 - crawk::AnnotatedEdges
 - crawk::Cycle
format::cycles::tests
 - crate::format::cycles::render_cycles_dot
 - crate::format::cycles::render_cycles_dot_highlight
 - crate::format::cycles::render_cycles_grouped
 - crate::format::cycles::render_cycles_plain
format::deps_cmd
 - crate::format::format_api_suffix
 - crawk::AnnotatedEdges
format::deps_cmd::tests
 - crate::format::deps_cmd::render_dot
 - crate::format::deps_cmd::render_grouped
 - crate::format::deps_cmd::render_plain
format::list_cmd
 - crawk::ModuleInfo
format::orphans
format::orphans::tests
 - crate::format::orphans::render_orphans
format::paths
 - crawk::Edge
format::paths::tests
 - crate::format::paths::render_paths_dot
 - crate::format::paths::render_paths_grouped
 - crate::format::paths::render_paths_plain
format::use_cmd
 - crawk::AnalysisResult
 - crawk::TypeReference
format::use_cmd::tests
 - crate::format::use_cmd::render_flat
 - crate::format::use_cmd::render_grouped
format::why_cmd
 - crawk::TypeReference
logger
 - crate::cli::CrawkArgs
logger::tests
 - crate::logger::use_ansi_colors

----- stderr -----
