tests/int/use_command/snapshots/integration__int__use_command__own_modules__module_main_flags_t_e.snap
---
source: tests/int/use_command/own_modules.rs
info:
  program: crawk
  args:
    - use
    - main
    - "-t"
    - "-e"
---
success: true
exit_code: 0
----- stdout -----
crate::cli::CheckArgs
crate::cli::CheckOutputFormat
crate::cli::CrawkArgs
crate::cli::CrawkCommands
crate::cli::CyclesMode
crate::cli::DepsArgs
crate::cli::DepsOutputFormat
crate::cli::ListArgs
crate::cli::ListOutputFormat
crate::cli::UseArgs
crate::cli::UseOutputFormat
crate::cli::WhyArgs
crate::cli::WhyOutputFormat
crate::format
crate::format::check_cmd::render_plain
crate::format::cycles::render_cycles_dot
crate::format::cycles::render_cycles_dot_highlight
crate::format::cycles::render_cycles_grouped
crate::format::cycles::render_cycles_plain
crate::format::deps_cmd::render_dot
crate::format::deps_cmd::render_grouped
crate::format::deps_cmd::render_plain
crate::format::list_cmd::ListDisplayOptions
crate::format::list_cmd::render_list_plain
crate::format::list_cmd::render_list_table
crate::format::orphans::render_orphans
crate::format::paths::render_paths_dot
crate::format::paths::render_paths_grouped
crate::format::paths::render_paths_plain
crate::format::use_cmd::render_flat
crate::format::use_cmd::render_grouped
crate::format::why_cmd::render_grouped
crate::format::why_cmd::render_plain
crate::logger::configure_tracing
crawk::AnalysisOptions
crawk::Analyzer
crawk::AnnotatedEdges
crawk::CheckOptions
crawk::DependencyGraph
crawk::DependencyGraphOptions
crawk::version
crawk::version::NAME
crawk::version::VERSION

----- stderr -----
